TheKabal (8 July 2013)
--------------------------------------
Replace create universe with Big Bang. (No more big bang, all CU once again).
Fix scheduler repeat / run once to reflect the behavior of its new name
Fix default ships placed in sector 0 (should be 1, Sol was moved there)
Set password reset to 90 minutes, not 30.

TheKabal (7 July 2013)
--------------------------------------
Add password reset function that sends an email with a reset code, based on a hash of the existing password
Fix missing lang string for l_news_broke in big bang and report

TheKabal (30 June 2013)
--------------------------------------
Perform extension loaded check for mbstring, so that we fail silently in its absence

TheKabal (29 June 2013)
--------------------------------------
Add note in docs/install that common.php uses the mbstring PHP extension, so BNT requires it
Add option to big bang/create universe to allow admins to choose a different language for the BB/CU process
Add footer broken text to language files
Fix check_login to no longer give errors when you access a page after you've logged out
Simplify common - remove hard coded language array
Move localized language names into language files
Redo option & option2 to support drop-in language files (not hard-coded against an array any more)

TheKabal (22 June 2013)
--------------------------------------
Change loops in later steps to match the new loop style from sector placement (X-500, not X-499), saves a loop from each by default
Add benchmarking for DB calls in final step (step 9 / 80.php) of big bang
Cleanup timer / elapsed calls to simplify them (substr is now not needed, as the class returns a nicely formatted version)
Change all timer elapsed output to be two significant digits - We don't need to worry about things that take less than 1/100th of a second.
In the Timer class, extremely small values (E-6 seconds small) were being reported as whole seconds