@@ -1,3 +1,7 @@
+TheKabal (27 July 2013)
+--------------------------------------
+TheMightyDude discovered that the language files were not stored in utf-8, and as a result were not giving correct utf-8 results in CU and elsewhere. Fixed!
+
 TheKabal (8 July 2013)
 --------------------------------------
 Replace create universe with Big Bang. (No more big bang, all CU once again).
